src/objects/AppLoggerSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>DisableAll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableAudit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableDebug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableSecurity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Security</label>
        <type>Checkbox</type>
    </fields>
    <label>App Logger Settings</label>
</CustomObject>